k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: web
spec:
 replicas: 3
 selector:
   matchLabels:
     app: web
 template:
   metadata:
     labels:
       app: web
   spec:
     imagePullSecrets:
     - name: micro-pro
     containers:
       - image: registry.digitalocean.com/micro-pro/demo:5652347a
         name: web
         ports:
           - name: backend-port
             containerPort: 3000
