k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: backend-port
      name: http
  selector:
    app: web
